[package]
name = "hide-remote-desktop"
version = "0.2.0"
authors = ["qbx2 <sunyeop97@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
retour = { version = "0.3.1", features = ["static-detour"] }

[dependencies.windows]
version = "0.52.0"
features = ["Win32_Foundation",
            "Win32_System_Console",
            "Win32_System_Diagnostics_Debug",
            "Win32_System_LibraryLoader", "Win32_System_SystemServices",
            "Win32_UI_WindowsAndMessaging"]

[profile.release]
lto = true
